--- a/frontend/Softoom/src/app/components/home-page/home-page.component.html
+++ b/frontend/Softoom/src/app/components/home-page/home-page.component.html
@@ -7,6 +7,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
   </head>
   <body>
-    <h1>Home Page</h1>
+    <header>
+      <h1>Softoom</h1>
+    </header>
+
+    <div class="row">
+      <div class="col-2"></div>
+      <a routerLink="/sign-in" class="btn col-3">Sign In</a>
+      <div class="col-2"></div>
+      <a routerLink="/sign-up" class="btn col-3">Sign Up</a>
+      <div class="col-2"></div>
+    </div>
+    <footer>
+      <a href="/credits.html">credits</a>
+    </footer>
   </body>
 </html>
