--- a/frontend/Softoom/src/app/components/home-page/home-page.component.scss
+++ b/frontend/Softoom/src/app/components/home-page/home-page.component.scss
@@ -4,7 +4,7 @@ html {
 
 body {
   background: #efe1ce;
-  font-family: 'Comfortaa', cursive;
+  font-family: "Comfortaa", cursive;
   font-size: 14px;
   color: #efe1ce;
   text-align: center;
@@ -26,7 +26,7 @@ footer {
 .btn {
   border-radius: 10px;
   text-align: center;
-  font-family: 'Comfortaa', cursive;
+  font-family: "Comfortaa", cursive;
   font-size: 20px;
   color: white;
   background: #c1b3b6;
