--- a/frontend/Softoom/src/app/components/sign-up-page/sign-up-page.component.html
+++ b/frontend/Softoom/src/app/components/sign-up-page/sign-up-page.component.html
@@ -12,12 +12,13 @@
 
     <p id="error-box"></p>
 
-    <form class="signup-form col-6">
+    <form class="signup-form col-6" (submit)="signUp()" [formGroup]="signUpForm">
       <div class="form-title">User Sign Up</div>
       <input
         type="text"
         name="username"
         class="form-element"
+        formControlName="username"
         placeholder="Enter a email address"
         required
       />
@@ -25,16 +26,17 @@
         type="password"
         name="password"
         class="form-element"
+        formControlName="password"
         placeholder="Enter a password"
         required
       />
 
-      <select id="gender" class="form-element">
+      <select id="gender" class="form-element" formControlName="gender">
         <option value="male">Male</option>
         <option value="female">Female</option>
       </select>
 
-      <select id="room-type" class="form-element">
+      <select id="room-type" class="form-element" formControlName="roomType">
         <option value="option1">Study</option>
         <option value="option2">Soft</option>
         <option value="option3">Play</option>
