--- a/frontend/Softoom/src/app/components/sign-in-page/sign-in-page.component.html
+++ b/frontend/Softoom/src/app/components/sign-in-page/sign-in-page.component.html
@@ -10,14 +10,14 @@
       <h1>Softoom</h1>
     </header>
 
-    <p id="error-box"></p>
-
-    <form class="login-form col-6">
+    <form class="login-form col-6" (submit)="signIn()" [formGroup]="signInForm">
       <div class="form-title">User Sign In</div>
+      <p id="error-box">{{ error }}</p>
       <input
         type="text"
         name="username"
         class="form-element"
+        formControlName="username"
         placeholder="Enter a email address"
         required
       />
@@ -25,6 +25,7 @@
         type="password"
         name="password"
         class="form-element"
+        formControlName="password"
         placeholder="Enter a password"
         required
       />
