--- a/frontend/Softoom/src/app/components/sign-up-page/sign-up-page.component.html
+++ b/frontend/Softoom/src/app/components/sign-up-page/sign-up-page.component.html
@@ -10,7 +10,11 @@
       <h1>Softoom</h1>
     </header>
 
-    <form class="signup-form col-6" (submit)="signUp()" [formGroup]="signUpForm">
+    <form
+      class="signup-form col-6"
+      (submit)="signUp()"
+      [formGroup]="signUpForm"
+    >
       <div class="form-title">User Sign Up</div>
       <p id="error-box">{{ error }}</p>
       <input
