--- a/frontend/Softoom/src/app/app.component.html
+++ b/frontend/Softoom/src/app/app.component.html
@@ -1,5 +1,3 @@
-<!-- <app-home-page></app-home-page>
-<router-outlet></router-outlet> -->
+<app-home-page></app-home-page>
+<router-outlet></router-outlet>
 
-<app-female-character></app-female-character>
-<app-male-character></app-male-character>
