Created the basic menu form

--- a/frontend/Softoom/src/app/components/food-menu/food-menu.component.html
+++ b/frontend/Softoom/src/app/components/food-menu/food-menu.component.html
@@ -1,5 +1,30 @@
-<form class="login-form col-6">
+<form class="menu-form col-6">
   <div class="form-title">Food Menu</div>
+  <div class="row form-label">
+    <label class="col-4">Food Name</label>
+    <label class="col-4">Price</label>
+    <label class="col-4">Quantity</label>
+  </div>
+  <div class="form-element row">
+    <p class="col-4">Food Name</p>
+    <p class="col-4">Price</p>
+    <p class="col-4">Quantity</p>
+  </div>
+  <div class="form-element row">
+    <p class="col-4">Food Name</p>
+    <p class="col-4">Price</p>
+    <p class="col-4">Quantity</p>
+  </div>
+  <div class="form-element row">
+    <p class="col-4">Food Name</p>
+    <p class="col-4">Price</p>
+    <p class="col-4">Quantity</p>
+  </div>
+  <div class="form-element row">
+    <p class="col-4">Food Name</p>
+    <p class="col-4">Price</p>
+    <p class="col-4">Quantity</p>
+  </div>
   <div class="form-element row">
     <p class="col-4">Food Name</p>
     <p class="col-4">Price</p>
