--- a/frontend/Softoom/src/app/components/food-menu/food-menu.component.scss
+++ b/frontend/Softoom/src/app/components/food-menu/food-menu.component.scss
@@ -69,13 +69,32 @@ footer {
   text-align: center;
   font-family: "Comfortaa", cursive;
   font-size: 20px;
+  height: 40px;
+  width: 30px;
   color: white;
   background: #c1b3b6;
   border: 2px solid white;
-  padding: 10px 20px 10px 20px;
+  margin-left: -20px;
+  margin-top: 12px;
 }
 
 .btn:hover {
+  background: #00b7ef;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.submit-btn {
+  border-radius: 10px;
+  text-align: center;
+  font-family: "Comfortaa", cursive;
+  font-size: 20px;
+  color: white;
+  background: #c1b3b6;
+  border: 2px solid white;
+}
+
+.submit-btn:hover {
   background: #00b7ef;
   color: #ffffff;
   cursor: pointer;
