Improve the food store onclick functions

--- a/frontend/Softoom/src/app/components/food-menu/food-menu.component.html
+++ b/frontend/Softoom/src/app/components/food-menu/food-menu.component.html
@@ -1,5 +1,7 @@
 <form class="menu-form col-6">
-  <div class="form-title">Food Menu</div>
+  <div class="form-title">
+    Food Menu
+  </div>
   <div class="row form-label">
     <label class="col-4">Food Name</label>
     <label class="col-4">Price</label>
@@ -48,7 +50,7 @@
     <div class="col-2"></div>
     <button class="col-3 submit-btn">Submit</button>
     <div class="col-2"></div>
-    <button class="col-3 submit-btn">Reset</button>
+    <button class="col-3 submit-btn" (click)="reset()">Reset</button>
     <div class="col-2"></div>
   </div>
 </form>
