--- a/frontend/Softoom/src/app/components/food-menu/food-menu.component.scss
+++ b/frontend/Softoom/src/app/components/food-menu/food-menu.component.scss
@@ -1,46 +1,18 @@
-html {
-  overflow: -moz-scrollbars-vertical;
-}
-
-body {
-  background: #efe1ce;
-  font-family: "Comfortaa", cursive;
-  font-size: 14px;
-  color: #efe1ce;
-  text-align: center;
-  max-width: 100%;
-  margin: auto;
-  //center items in the body
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-header {
-  background: #c1b3b6;
-  width: 100%;
-}
-
-footer {
-  margin-top: 20px;
-  text-align: center;
-}
-
 .menu-form {
-  margin-top: 10px;
+  //in the center of the page
+  max-width: 50%;
   border-radius: 10px;
-  border: 5px #3c3d3f solid;
-  padding: 20px 10px 10px 10px;
+  border: 3px #3c3d3f solid;
   display: flex;
   flex-direction: column;
+  background: white;
 }
 
 .menu-form .form-title {
-  font-size: 20px;
+  font-size: 10px;
   font-weight: bold;
-  margin: -20px -10px 20px -10px;
-  padding: 10px 0px 10px 25px;
+  padding: 3px 0px 5px 0px;
+  text-align: center;
   color: white;
   background-color: #3c3d3f;
   border-radius: 7px 7px 0px 0px;
@@ -48,17 +20,16 @@ footer {
 
 .menu-form .form-label
 {
-  font-size: 20px;
+  font-size: 10px;
   font-weight: bold;
-  margin: px 0px 0px 0px;
-  padding: 0px 0px 0px 0px;
+  padding: 5px 0px 5px 0px;
   color: #3c3d3f;
   width: 100%;
   border-bottom: 2px solid #3c3d3f;
 }
 
 .menu-form .form-element {
-  font-size: 20px;
+  font-size: 10px;
   border-bottom: 2px solid #3c3d3f;
   background: white;
   width: 100%;
@@ -68,14 +39,14 @@ footer {
   border-radius: 10px;
   text-align: center;
   font-family: "Comfortaa", cursive;
-  font-size: 20px;
-  height: 40px;
-  width: 30px;
+  font-size: 10px;
+  height: 20px;
+  width: 20px;
   color: white;
   background: #c1b3b6;
   border: 2px solid white;
-  margin-left: -20px;
-  margin-top: 12px;
+  margin-left: -15px;
+  margin-top: 5px;
 }
 
 .btn:hover {
@@ -88,7 +59,7 @@ footer {
   border-radius: 10px;
   text-align: center;
   font-family: "Comfortaa", cursive;
-  font-size: 20px;
+  font-size: 10px;
   color: white;
   background: #c1b3b6;
   border: 2px solid white;
