Used Stripe to build payment process

--- a/frontend/Softoom/src/app/components/food-menu/food-menu.component.html
+++ b/frontend/Softoom/src/app/components/food-menu/food-menu.component.html
@@ -48,7 +48,7 @@
   </div>
   <div class="form-element row">
     <div class="col-2"></div>
-    <button class="col-3 submit-btn">Submit</button>
+    <button class="col-3 submit-btn" (click)="makePayment()">Submit</button>
     <div class="col-2"></div>
     <button class="col-3 submit-btn" (click)="reset()">Reset</button>
     <div class="col-2"></div>
