Finished the Food Order features

--- a/frontend/Softoom/src/app/components/food-menu/food-menu.component.html
+++ b/frontend/Softoom/src/app/components/food-menu/food-menu.component.html
@@ -1,7 +1,6 @@
+<div id="status"></div>
 <form class="menu-form col-6">
-  <div class="form-title">
-    Food Menu
-  </div>
+  <div class="form-title">Food Menu</div>
   <div class="row form-label">
     <label class="col-4">Food Name</label>
     <label class="col-4">Price</label>
@@ -54,4 +53,3 @@
     <div class="col-2"></div>
   </div>
 </form>
-
