Created the health bar for the character

--- a/frontend/Softoom/src/app/components/male-character/male-character.component.html
+++ b/frontend/Softoom/src/app/components/male-character/male-character.component.html
@@ -6,3 +6,5 @@
   <app-storage class="cols-6 dialog"></app-storage>
   <button class="btn dialog" (click)="closeFridge()">X</button>
 </ng-container>
+<div class="hungerValue" [ngStyle]="{'width': hungerValue+ 'px'}"></div>
+
