--- a/frontend/Softoom/src/app/components/male-character/male-character.component.scss
+++ b/frontend/Softoom/src/app/components/male-character/male-character.component.scss
@@ -26,3 +26,12 @@
   color: #ffffff;
   cursor: pointer;
 }
+.hungerValue {
+  position: fixed;
+  top: 20px;
+  left: 40px;
+  height: 10px;
+  background-color: pink;
+  border: 1px solid black;
+  border-radius: 3px;
+}
