--- a/frontend/Softoom/src/app/components/storage/storage.component.scss
+++ b/frontend/Softoom/src/app/components/storage/storage.component.scss
@@ -18,6 +18,12 @@
   border-radius: 7px 7px 0px 0px;
 }
 
+.menu-form .form-food-section {
+  margin: 10px -10px 0px -10px;
+  height: 180px;
+  font-size: 20px;
+}
+
 .menu-form .form-label {
   font-size: 10px;
   font-weight: bold;
