--- a/frontend/Softoom/src/app/components/male-character/male-character.component.scss
+++ b/frontend/Softoom/src/app/components/male-character/male-character.component.scss
@@ -27,7 +27,7 @@
   cursor: pointer;
 }
 .hungerValue {
-  position: fixed;
+  position: absolute;
   // z-index: 1000;
   top: 20px;
   left: 40px;
@@ -38,7 +38,7 @@
 }
 
 .signout-btn {
-  position: fixed;
+  position: absolute;
   top: 85%;
   left: 85%;
   border-radius: 10px;
