--- a/frontend/Softoom/src/app/components/home-page/home-page.component.html
+++ b/frontend/Softoom/src/app/components/home-page/home-page.component.html
@@ -18,7 +18,7 @@
       <div class="col-2"></div>
     </div>
     <footer>
-      <a href="/credits.html">credits</a>
+      <a routerLink="/credit">credits</a>
     </footer>
   </body>
 </html>
