Final Update On SCSS styling

--- a/frontend/Softoom/src/app/components/credit/credit.component.html
+++ b/frontend/Softoom/src/app/components/credit/credit.component.html
@@ -18,7 +18,8 @@
         <a href="https://sketchfab.com/features/free-3d-models">
           sketchfab.com
         </a>
-        authors: riikkakilpelainen, IsaacTheMaverick, archiveblue51121, Thunder,
+        <br />
+        Authors: riikkakilpelainen, IsaacTheMaverick, archiveblue51121, Thunder,
         rivego, AVIKA, archiveblue51121
       </li>
     </ul>
