--- a/frontend/Softoom/src/app/components/sign-in-page/sign-in-page.component.html
+++ b/frontend/Softoom/src/app/components/sign-in-page/sign-in-page.component.html
@@ -35,7 +35,7 @@
     </form>
 
     <footer>
-      <a href="/credits.html">credits</a>
+      <a routerLink="/credit">credits</a>
     </footer>
   </body>
 </html>
