--- a/frontend/Softoom/src/app/components/credit/credit.component.scss
+++ b/frontend/Softoom/src/app/components/credit/credit.component.scss
@@ -5,28 +5,29 @@ html {
 body {
   background: #efe1ce;
   font-family: "Comfortaa", cursive;
-  font-size: 10px;
+  font-size: 20px;
   color: black;
   text-align: center;
   max-width: 100%;
   margin: auto;
+  padding-bottom: 20px;
 }
 
 header {
   background: #c1b3b6;
-  padding: 20px 0;
+  padding: 100px 0 100px 0;
   margin-bottom: 20px;
 }
 
 .btn {
-  border-radius: 10px;
+  border-radius: 15px;
   text-align: center;
   font-family: "Comfortaa", cursive;
-  font-size: 20px;
-  color: white;
-  background: #c1b3b6;
-  border: 2px solid white;
+  font-size: 60px;
+  border: 5px solid #efe1ce;
+  color: #efe1ce;
   padding: 10px 20px 10px 20px;
+  margin: 20px 0;
 }
 
 .btn:hover {
