--- a/frontend/Softoom/src/app/components/home-page/home-page.component.scss
+++ b/frontend/Softoom/src/app/components/home-page/home-page.component.scss
@@ -5,7 +5,7 @@ html {
 body {
   background: #efe1ce;
   font-family: "Comfortaa", cursive;
-  font-size: 14px;
+  font-size: 40px;
   color: #efe1ce;
   text-align: center;
   max-width: 100%;
@@ -14,12 +14,14 @@ body {
 
 header {
   background: #c1b3b6;
-  padding: 20px 0;
-  margin-bottom: 20px;
+  padding: 60px 0 60px 0;
+  margin-bottom: 40px;
 }
 
 footer {
   margin-top: 20px;
+  padding-top: 20px;
+  padding-bottom: 40px;
   text-align: center;
 }
 
@@ -27,11 +29,13 @@ footer {
   border-radius: 10px;
   text-align: center;
   font-family: "Comfortaa", cursive;
-  font-size: 20px;
+  font-size: 40px;
   color: white;
   background: #c1b3b6;
   border: 2px solid white;
   padding: 10px 20px 10px 20px;
+  margin-top: 80px;
+  margin-bottom: 80px;
 }
 
 .btn:hover {
