--- a/frontend/Softoom/src/app/components/male-character/male-character.component.html
+++ b/frontend/Softoom/src/app/components/male-character/male-character.component.html
@@ -8,7 +8,7 @@
 </ng-container>
 <div
   class="hungerValue"
-  [ngStyle]="{ width: hungerValue + 'px' }"
+  [ngStyle]="{ width: hungerValue * 3 + 'px' }"
   *ngIf="isAuth"
 ></div>
 <button class="signout-btn" (click)="signOut()" *ngIf="isAuth">Sign Out</button>
