--- a/frontend/Softoom/src/app/components/sign-in-page/sign-in-page.component.scss
+++ b/frontend/Softoom/src/app/components/sign-in-page/sign-in-page.component.scss
@@ -5,7 +5,7 @@ html {
 body {
   background: #efe1ce;
   font-family: "Comfortaa", cursive;
-  font-size: 14px;
+  font-size: 40px;
   color: #efe1ce;
   text-align: center;
   max-width: 100%;
@@ -24,6 +24,8 @@ header {
 
 footer {
   margin-top: 20px;
+  padding-top: 20px;
+  padding-bottom: 50px;
   text-align: center;
 }
 
@@ -37,10 +39,10 @@ footer {
 }
 
 .login-form .form-title {
-  font-size: 20px;
+  font-size: 30px;
   font-weight: bold;
   margin: -20px -10px 20px -10px;
-  padding: 10px 0px 10px 25px;
+  padding: 10px 0px 10px 0px;
   color: white;
   background-color: #3c3d3f;
   border-radius: 7px 7px 0px 0px;
@@ -48,9 +50,10 @@ footer {
 
 .login-form .form-element {
   margin-bottom: 10px;
-  font-size: 20px;
+  font-size: 30px;
   border-radius: 10px;
   padding: 5px 10px 5px 10px;
+  margin: 10px 10px 10px 10px;
   border: 2px solid #3c3d3f;
   background: white;
 }
@@ -59,11 +62,13 @@ footer {
   border-radius: 10px;
   text-align: center;
   font-family: "Comfortaa", cursive;
-  font-size: 20px;
+  font-size: 30px;
   color: white;
   background: #c1b3b6;
   border: 2px solid white;
-  padding: 10px 20px 10px 20px;
+  padding: 20px 20px 20px 20px;
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
 
 .btn:hover {
@@ -79,5 +84,5 @@ footer {
 #error-box {
   color: red;
   align-self: left;
-  font-size: small;
+  font-size: large;
 }
