--- a/frontend/Softoom/src/app/components/sign-up-page/sign-up-page.component.html
+++ b/frontend/Softoom/src/app/components/sign-up-page/sign-up-page.component.html
@@ -50,7 +50,7 @@
     </form>
 
     <footer>
-      <a href="/credits.html">credits</a>
+      <a routerLink="/credit">credits</a>
     </footer>
   </body>
 </html>
